--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -232,96 +232,96 @@
     <string name="Best">Лучшее</string>
     
     <!-- File properties -->
-    <string name="Content_summary">Content summary</string>
-    <string name="File_types">File types</string>
-    <string name="Top_files">Top % files</string>
-    <string name="Location">Location</string>
-    <string name="Type">Type</string>
-    <string name="Parent_path">Parent path</string>
-    <string name="Last_modified">Last modified</string>
-    <string name="Directory">Directory</string>
-    <string name="Unknown">Unknown</string>
-    <string name="Symbolic_link">Symbolic link</string>
-    <string name="Link_target">Link target</string>
-    <string name="Open">Open</string>
-    <string name="Open_directory">Open directory</string>
+    <string name="Content_summary">Содержание</string>
+    <string name="File_types">Типы файлов</string>
+    <string name="Top_files">Топ % файлов</string>
+    <string name="Location">Расположение</string>
+    <string name="Type">Тип</string>
+    <string name="Parent_path">Исходный путь</string>
+    <string name="Last_modified">Последние изменения</string>
+    <string name="Directory">Директория</string>
+    <string name="Unknown">Неизвестно</string>
+    <string name="Symbolic_link">Симлинк</string>
+    <string name="Link_target">Объект симлинка</string>
+    <string name="Open">Открыть</string>
+    <string name="Open_directory">Открыть каталог</string>
     <string name="MD5">MD5</string>
-    <string name="Calculate">Calculate</string>
-    <string name="Compare">Compare</string>
-    <string name="Paste_to_compare">Paste to compare</string>
-    <string name="Files">Files</string>
-    <string name="Folders">Folders</string>
-    <string name="Calculation_error">Calculation error</string>
-    <string name="Content">Content</string>
-    <string name="Other_used">Other</string>
-    <string name="Free_space">Free</string>
-    <string name="Usage">Usage</string>
-    <string name="Attributes">Attributes</string>
-    <string name="Read">Read</string>
-    <string name="Write">Write</string>
-    <string name="Hidden">Hidden</string>
-    <string name="Additional_info">Additional information</string>
-    <string name="Percent">Percent</string>
-    <string name="Music">Music</string>
-    <string name="Pictures">Pictures</string>
-    <string name="Videos">Videos</string>
-    <string name="Archives">Archives</string>
-    <string name="Documents">Documents</string>
-    <string name="Change">Change</string>
-    <string name="Execute">Execute</string>
-    <string name="Owner">Owner</string>
-    <string name="Group">Group</string>
-    <string name="Others">Others</string>
-    <string name="Owners">Owners</string>
-    <string name="Permissions">Permissions</string>
-    <string name="Set">Set</string>
-    <string name="Used_space">Used space</string>
-    <string name="Free_space">Free space</string>
-    <string name="Total_size">Total size</string>
-    <string name="Artist">Artist</string>
-    <string name="Title">Title</string>
-    <string name="Duration">Duration</string>
-    <string name="Resolution">Resoultion</string>
-    <string name="Recorded">Recorded</string>
-    <string name="Width">Width</string>
-    <string name="Height">Height</string>
-    <string name="Manufacturer">Manufacturer</string>
-    <string name="Camera_model">Camera model</string>
-    <string name="Software">Software</string>
-    <string name="Orientation">Orientation</string>
-    <string name="Exposure_time">Exposure time</string>
-    <string name="Exposure_bias">Exposure bias</string>
-    <string name="White_balance">White balance</string>
-    <string name="Focal_length">Focal length</string>
-    <string name="Aperture_size">Aperture size</string>
-    <string name="Flash">Flash</string>
+    <string name="Calculate">Вычислить</string>
+    <string name="Compare">Сравнить</string>
+    <string name="Paste_to_compare">Вставить для сравнения</string>
+    <string name="Files">Файлы</string>
+    <string name="Folders">Папки</string>
+    <string name="Calculation_error">Ошибка вычисления</string>
+    <string name="Content">Содержание</string>
+    <string name="Other_used">Другие</string>
+    <string name="Free_space">Свободно</string>
+    <string name="Usage">Занято</string>
+    <string name="Attributes">Атрибуты</string>
+    <string name="Read">Чтение</string>
+    <string name="Write">Запись</string>
+    <string name="Hidden">Скрытый</string>
+    <string name="Additional_info">Доп. информация</string>
+    <string name="Percent">Процент</string>
+    <string name="Music">Музыка</string>
+    <string name="Pictures">Изображения</string>
+    <string name="Videos">Видео</string>
+    <string name="Archives">Архивы</string>
+    <string name="Documents">Документы</string>
+    <string name="Change">Изменить</string>
+    <string name="Execute">Выполнить</string>
+    <string name="Owner">Владелец</string>
+    <string name="Group">Группа</string>
+    <string name="Others">Другое</string>
+    <string name="Owners">Владельцы</string>
+    <string name="Permissions">Разрешения</string>
+    <string name="Set">Установить</string>
+    <string name="Used_space">Использовано</string>
+    <string name="Free_space">Свободно</string>
+    <string name="Total_size">Общий объём</string>
+    <string name="Artist">Исполнитель</string>
+    <string name="Title">Название</string>
+    <string name="Duration">Продолж-сть</string>
+    <string name="Resolution">Разрешение</string>
+    <string name="Recorded">Записан</string>
+    <string name="Width">Ширина</string>
+    <string name="Height">Высота</string>
+    <string name="Manufacturer">Изготовитель</string>
+    <string name="Camera_model">Модель камеры</string>
+    <string name="Software">ПО</string>
+    <string name="Orientation">Ориентация</string>
+    <string name="Exposure_time">Время выдержки</string>
+    <string name="Exposure_bias">Величина экспозиции</string>
+    <string name="White_balance">Баланс белого</string>
+    <string name="Focal_length">Фокусное расстояние</string>
+    <string name="Aperture_size">Диафрагма</string>
+    <string name="Flash">Вспышка</string>
     
     <!-- Dialogs again -->
     	<!-- File exists dialog -->
     	<!-- <string name="This_file_already_exists">This file already exists. What do you want to do?</string>
     	<string name="This_folder_already_exists">This folder already exists. What do you want to do?</string> -->
-    	<string name="File_exists">File exists</string>
-    	<string name="Skip">Skip</string>
-    	<string name="Overwrite">Overwrite</string>
-    	<string name="Merge">Merge</string>
-    	<string name="Keep_both">Keep both</string>
-    	<string name="Remember_action">Remember this action</string>
-    	<string name="Keep_the_old_file">Keep the old file</string>
-    	<string name="The_new_file_will_have_its_name_changed">Changes the name of the new file</string>
-    	<string name="Replace_the_file_with_this">Replaces the existing file</string>
-    	<string name="Create_master_password">Create a master password</string>
+    	<string name="File_exists">Уже существует</string>
+    	<string name="Skip">Пропустить</string>
+    	<string name="Overwrite">Перезаписать</string>
+    	<string name="Merge">Слияние</string>
+    	<string name="Keep_both">Сохранить оба</string>
+    	<string name="Remember_action">Запомнить действие</string>
+    	<string name="Keep_the_old_file">Пропустить старый файл</string>
+    	<string name="The_new_file_will_have_its_name_changed">Имя нового файла будет изменено</string>
+    	<string name="Replace_the_file_with_this">Файл заменится</string>
+    	<string name="Create_master_password">Создание мастер-пароля</string>
     	
-    	<string name="Choose_an_activity_to_open_the_file">Choose an activity to open the file</string>
-    	<string name="Always_use_this_application">Always use this application</string>
-    	<string name="Send_the_file_using">Send the file using</string>
-    	<string name="Progress">Progress</string>
-    	<string name="Minimize">Minimize</string>
-    	<string name="Pause">Pause</string>
-    	<string name="Resume">Resume</string>
-    	<string name="Dismiss">Dismiss</string>
+    	<string name="Choose_an_activity_to_open_the_file">Выбрать действие для открытия файла</string>
+    	<string name="Always_use_this_application">Всегда использовать это приложение</string>
+    	<string name="Send_the_file_using">Отправить файл с помощью</string>
+    	<string name="Progress">Обработка</string>
+    	<string name="Minimize">Свернуть</string>
+    	<string name="Pause">Пауза</string>
+    	<string name="Resume">Возврат</string>
+    	<string name="Dismiss">Прервать</string>
     	
-    	<string name="Abort_operation">Abort operation</string>
-    	<string name="There_is_already_an_operation_running">An operation is currently running. Please wait until it finishes.</string>
+    	<string name="Abort_operation">Прервать операцию</string>
+    	<string name="There_is_already_an_operation_running">Уже запущена одна операция. Дождитесь ее завершения.</string>
     
     	<!-- Question dialogs -->
     	<string name="Are_you_sure_you_want_to_clear_the_history">Are you sure you want to clear the history?</string>
